@@ -1,5 +1,7 @@
 Changelog for Discuss.
 
+- Improve performance of disSession GC
+- Get rid of MODX.com analytics code in default theme.
 - Fix XSS in the search controller (date_start, date_end).
 - Fix XSS in the page variable.
 - Increase size of disPost.message field to mediumtext.
